# mcp-server-openmeteo

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: main.rs
