[package]
name = "mcp-server-openmeteo"
version = "0.1.0"
edition = "2021"
description = "OpenMeteo Weather API MCP Server"
authors = ["Gianluca Brigandi <gbrigand@gmail.com>"]
license = "MIT"
repository = "https://github.com/gbrigandi/mcp-server-openmeteo"
readme = "README.md"

[dependencies]
open-meteo-rs = "0.0.4"
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
schemars = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
thiserror = "2.0"
urlencoding = "2.1.3"
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

